--- a/index.html
+++ b/index.html
@@ -54,12 +54,9 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop.</p>
+                    <h2>LUGARES PERFEITOS PARA VOCE </h2>
+
+                    <p class="p-2">"O lugar perfeito é uma sensação, um estado de espírito, é inspiração, poesia em forma de paisagem, e o refúgio onde a alma encontra sossego</p>
                 </div>
             </div>
         </section>
