--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <div class="col-5">
                     <h2>LUGARES PERFEITOS PARA VOCE </h2>
 
-                    <p class="p-2">"O lugar perfeito é uma sensação, um estado de espírito, é inspiração, poesia em forma de paisagem, e o refúgio onde a alma encontra sossego</p>
+                    <p class="p-2">"O lugar perfeito é uma sensação, um estado de espírito, é inspiração, poesia em forma de paisagem, e o refúgio onde a alma encontra sossego "Contemplar a natureza é apreciar as árvores que dançam ao ritmo do vento</p>
                 </div>
             </div>
         </section>
