--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <div class="col-5">
                     <h2>Lugares </h2>
 
-                    <p class="p-2">"O lugar perfeito é uma sensação, um estado de espírito, é inspiração, poesia em forma de paisagem, e o refúgio onde a alma encontra sossego "Contemplar a natureza é apreciar as árvores que dançam ao ritmo do vento</p>
+                    <p class="p-2">"O lugar perfeito é uma sensação, um estado de espírito, é inspiração, poesia em forma de paisagem,Nada como um banho de mar para lavar a alma e receber um abraço da natureza".</p>
                 </div>
             </div>
         </section>
