--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>Lugares </h2>
+                    <h2>Lugare </h2>
 
                     <p class="p-2">"O lugar perfeito é uma sensação, um estado de espírito, é inspiração, poesia em forma de paisagem,Nada como um banho de mar para lavar a alma e receber um abraço da natureza".</p>
                 </div>
