--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/praia.png" class="img-fluid rounded-5"
+                        <img src="img/lago.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
