--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/praia.png"
+                        <img src="img/agua.png"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
