--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logoana.jpg" alt="Logotipo da Ana Castela" class="nav-img " loading="lazy">
+            <img src="img/praia.png" alt="Logotipo da Ana Castela" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -46,10 +46,10 @@
             </div>
         </section>
 
-        <section id="Ana Castela" class="my-5 pt-6 secao-tropicalia">
+        <section id="Praia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>Quem é Ana Castela?</h2>
+                    <h2>Lugar</h2>
                     <p class="p-2">Ana Castela é uma cantora e compositora brasileira, conhecida pelo seu estilo no gênero agronejo, uma vertente do sertanejo.
                          Começou sua carreira em 2021 com o single "Boiadeira" e alcançou sucesso com hits como "Pipoco".
                           Ela é uma das principais representantes do agronejo e tem lançado vários sucessos, além de se destacar nas redes sociais e na moda.</p>
@@ -63,11 +63,11 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
+                        <img src="img/salgadapraia.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/agua.png" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
