--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/praia.png" alt="Logotipo da Ana Castela" class="nav-img " loading="lazy">
+            <img src="img/agua.png" alt="Logotipo da Ana Castela" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -67,7 +67,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/agua.png" class="img-fluid rounded-5"
+                        <img src="img/praia.png" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
