--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
                     <h2>Lugar</h2>
-                    <p class="p-2">Ana Castela é uma cantora e compositora brasileira, conhecida pelo seu estilo no gênero agronejo, uma vertente do sertanejo.
-                         Começou sua carreira em 2021 com o single "Boiadeira" e alcançou sucesso com hits como "Pipoco".
-                          Ela é uma das principais representantes do agronejo e tem lançado vários sucessos, além de se destacar nas redes sociais e na moda.</p>
+                    <p class="p-2">O lugar perfeito é uma sensação, um estado de espírito, uma conexão profunda com o que realmente importa na vidaA vida pode não ser um mar de rosas, mas é um oceano de emoções.</p>
                 </div>
             </div>
         </section>
