--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
                     <h2>Lugar</h2>
-                    <p class="p-2">O lugar perfeito é uma sensação, um estado de espírito, uma conexão profunda com o que realmente importa na vidaA vida pode não ser um mar de rosas, mas é um oceano de emoções.</p>
+                    <p class="p-2">O lugar perfeito é uma sensação, um estado de espírito, uma conexão profunda com o que realmente importa na vida. A vida pode não ser um mar de rosas, mas é um oceano de emoções.</p>
                 </div>
             </div>
         </section>
