--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas </h1>
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
-                        conhecer!</a>
+                        conhecer!</a><div id="acessibilidade" class="menu-acessibilidade"> 
+                            <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
+                            <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
+                                    <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="Aumentar o tamanho da fonte">A+</button>
+                                    <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir o tamanho da fonte">A-</button>
+                                    <button id="alterna-contraste" class="btn btn-primary fw-bold" aria-label="Alterna o contraste de cores"> <i class="bi bi-shadows"></i></button>
+                            </div>
+                    </div>
+                    
                 </div>
 
             </div>
@@ -114,4 +122,12 @@
 </body>
 
 </html>
+        <div id="acessibilidade" class="menu-acessibilidade"> 
+    <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
+    <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
+            <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="Aumentar o tamanho da fonte">A+</button>
+            <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir o tamanho da fonte">A-</button>
+            <button id="alterna-contraste" class="btn btn-primary fw-bold" aria-label="Alterna o contraste de cores"> <i class="bi bi-shadows"></i></button>
+    </div>
+</div>
 
