--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas </h1>
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
-                        conhecer!</a><div id="acessibilidade" class="menu-acessibilidade"> 
-                            <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
-                                             </div>
+                        conhecer!</a>
                     
                 </div>
 
