--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/maldivas.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                        <img src="img/lugar.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
