--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                         conhecer!</a>
                     
                 </div>
+                <img src="img/agua.png"
+                alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone"
+                title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
             </div>
         </section>
