--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
 
     </header>
 
-
-
     <main class="container my-5">
 
         <section id="inicio" class="my-5">
@@ -60,10 +58,10 @@
             </div>
         </section>
 
-        <section id="galeria">
+        <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
             <h2 class="text-center pt-5">Galeria</h2>
-            <div class="container p-3 mt-3 fundo-galeria ">
-
+            <div class="container p-3 mt-3 fundo-galeria">
+    
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
                         <img src="img/lago.jpg"
